# ZelopackInd-stria

./: .replit  .replit.workflow  FUNCIONALIDADES_IMPLEMENTADAS.md  INSTRUCOES_DE_INSTALACAO.md  LICENSE.txt  README.md  app.py  auto_check.py  background_checker.py  build_executable.bat  build_executable.sh  check_admin.py  check_alex.py  check_zip.py  config.py  cookies.txt  create_archive.py  create_excel.py  create_installer_images.py  create_linux_package.sh  create_macos_installer.sh  create_tables.py  create_windows_installer.bat  dependencies.txt  extract_excel.py  extracted_excel_data.json  fix_db.py  generate_icon.py  installer_config.nsi  login_as_alex.py  login_page.html  main.py  models.py  package_all.py  pyproject.toml  reset_admin.py  reset_report_table.py  run_background_checker.py  run_tests.py  setup.py  (+11 more)
Uploads/: fornecedores.xlsx
attached_assets/: CALCULOS_LAB_RAFA.xlsx  F_PRD_ -  Controle de Homogeneização.xlsx  F_PRD_004_PASTEURIZADORES.docx  F_PRD_006_ROBO.xlsx  F_PRD_007_CANUDEIRA.docx  F_PRD_008_LIBERAÇÃO.xlsx  F_QLD_001 Lista de Presença.docx  F_QLD_005 Descrição de Parada.xlsx  F_QLD_009_DESENVASE.xlsx  F_QLD_029 - Análise de aprovação de Açucar Liquido.xlsx  F_QLD_032 - Monitormamento diário Temperatura Containers Atualizado.xlsx  Formulário de Inspeção de produção Desenvase e Pasteurizadores.xlsx  Formulário de Inspeção de produção Distribuição e empacotamento.xlsx  Formulário de Inspeção de produção TBA.xlsx  Novo(a) Documento do Microsoft Word (2).docx  (+3 more)
blueprints/: auth.py  dashboard.py  resources.py  users.py
templates/: 404.html  (+8 more)
(+287 files in other folders)
